[gd_scene load_steps=9 format=3 uid="uid://ovinnf4iqxsn"]

[ext_resource type="Script" path="res://level_2.gd" id="1_iqmq1"]
[ext_resource type="PackedScene" uid="uid://mouvuk22mn85" path="res://hud.tscn" id="3_mump5"]
[ext_resource type="PackedScene" uid="uid://coom2gtmojaa0" path="res://answer_spawn.tscn" id="4_01a0b"]
[ext_resource type="PackedScene" uid="uid://2tvohq7u2ygs" path="res://player.tscn" id="5_7q4lw"]
[ext_resource type="PackedScene" uid="uid://cge8mgijxca8v" path="res://kill_plane.tscn" id="6_eaq16"]
[ext_resource type="AudioStream" uid="uid://w85gdxq5ey5x" path="res://audio/airplane_ambience-6830.mp3" id="7_8nu06"]
[ext_resource type="PackedScene" uid="uid://b8r4212keejxx" path="res://pause_menu.tscn" id="8_2fwre"]
[ext_resource type="PackedScene" uid="uid://cstan4t6ev2bb" path="res://background_3.tscn" id="8_c1xqc"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_iqmq1")

[node name="Hud" parent="." instance=ExtResource("3_mump5")]

[node name="AnswerSpawn" parent="." instance=ExtResource("4_01a0b")]

[node name="Player" parent="." instance=ExtResource("5_7q4lw")]
position = Vector2(571, 588)

[node name="KillPlane" parent="." instance=ExtResource("6_eaq16")]
position = Vector2(6, -11)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8nu06")

[node name="Pause_menu" parent="." instance=ExtResource("8_2fwre")]
visible = false
offset_left = 500.0
offset_top = 262.0
offset_right = 500.0
offset_bottom = 262.0

[node name="Background3" parent="." instance=ExtResource("8_c1xqc")]
